# analyze-aws-usage-localstack

./: .gitignore  README.md
localstack-tinybird-logger/: .gitignore  README.md  setup.cfg
localstack-tinybird-logger/localstack_tinybird_logger/: __init__.py  config.py  extension.py
tinybird-workspace/datasources/: aws_api_calls.datasource  aws_api_calls_historic.datasource  aws_s3_api_calls.datasource
tinybird-workspace/endpoints/: s3_requests.pipe  s3_requests_bucket.pipe
tinybird-workspace/pipes/: example_queries.pipe  mv_aws_s3_api_calls.pipe
