[metadata]
name = localstack-tinybird-logger
version = 0.1.0
url = https://github.com/thrau/localstack-tinybird-logger
author = Thomas Rausch
author_email = thomas@localstack.cloud
description = LocalStack extension to log AWS API calls into Tinybird
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=1.0

[options.entry_points]
localstack.extensions =
    localstack-tinybird-logger = localstack_tinybird_logger.extension:TinybirdLoggerExtension
